2010-05-16  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprsis.c, aprx.conf.in, aprx.8.in, doc/aprx-manual.odt:
	    Emphasize that <aprsis>'s login parameter is to be
	    set ONLY when it needs to be different than mycall
	    value.  (But tolerate also '$mycall' alias.)

	* aprx.c:
	    Update internal tocall default to 'APRX1F'.

	* interface.c, digipeater.c:
	    Tx-iGate fixes for case where outgoing packet has no
	    VIA field(s).  System saw that "requested hops = 0,
	    done hops = 0 -> no need to send out".

	* parse_aprs.c:
	    Make sure that all things creating debug output are
	    followed by a "\n".

	* igate.c:
	    Relax station callsign format rules inside a received
	    3rd-party frame.

2010-05-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    Under all situations, fill in pbuf_t->dstcall_end.

	* debian/rules:
	    Do not strip resulting objects. We want debug symbols!

	* digipeater.c:
	    Improve config error reporting.

	* config.c:
	    Tolerate config file ending without a newline.

2009-12-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, VERSION: 1.98

	* rpm/aprx.spec,  debian/docs, debian/control:
	    More documents into the packages

	* beacon.c, aprx.8.in, aprx.conf.in, aprx-complex.conf.in,
	  doc/aprx-manual.odt, doc/aprx-manual.pdf:
	    Changes on beacon definition keywords to make them clearer
	    for a user.  Old forms continue as silently accepted aliases.

2009-12-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.97

	* beacon.c, aprx.8.in, aprx.conf.in, aprx-complex.conf.in:
	    Never send to APRSIS interface.
	    Define 'object' and 'item' type named entities.
	    Uppercasify several of input fields.

	* interface.c, digipeater.c, aprx.h:
	    On tx-igate behaviour, add configured via-path on outgoing
	    3rd-party frames

2009-12-16  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c: