@@ -1,3 +1,8 @@
+2010-05-23  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* digipeater.c, netax25.c, ttyreader.c:
+	    Debug printing.
+
 2010-05-16  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* aprsis.c, aprx.conf.in, aprx.8.in, doc/aprx-manual.odt:
